package modules

import (
	"encoding/json"
	"io"
	"log"
	"net/http"
	"strings"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/metadata"
	"google.golang.org/protobuf/types/known/emptypb"
	authpb "stormlink/server/grpc/auth/protobuf"
	mediapb "stormlink/server/grpc/media/protobuf"
	"stormlink/server/utils"
)

// loginHandler –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –≤—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func LoginHandler(w http.ResponseWriter, r *http.Request, grpcConn *grpc.ClientConn) {
	if r.Method != http.MethodPost {
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
		return
	}
	log.Printf("üì• [HTTP] Request: POST /v1/users/login")
	var req authpb.LoginRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		log.Printf("‚ùå [Login] Invalid request body: %v", err)
		http.Error(w, `{"error": "invalid request body"}`, http.StatusBadRequest)
		return
	}
	authClient := authpb.NewAuthServiceClient(grpcConn)
	resp, err := authClient.Login(r.Context(), &req)
	if err != nil {
		log.Printf("‚ùå [Login] gRPC error: %v", err)
		http.Error(w, `{"error": "`+err.Error()+`"}`, http.StatusUnauthorized)
		return
	}
	utils.SetAuthCookies(w, resp.AccessToken, resp.RefreshToken)
	log.Printf("‚úÖ [Login] Set auth cookies")
	w.Header().Set("Content-Type", "application/json")
	if err := json.NewEncoder(w).Encode(resp); err != nil {
		log.Printf("‚ùå [Login] Failed to encode response: %v", err)
		http.Error(w, `{"error": "failed to encode response"}`, http.StatusInternalServerError)
		return
	}
	log.Printf("üì§ [HTTP] Response: Login successful")
}

// logoutHandler –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –≤—ã—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func LogoutHandler(w http.ResponseWriter, r *http.Request, grpcConn *grpc.ClientConn) {
	if r.Method != http.MethodPost {
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
		return
	}
	log.Printf("üì• [HTTP] Request: POST /v1/users/logout")
	authHeader := r.Header.Get("Authorization")
	log.Printf("üîç [Logout] HTTP Authorization header: %s", authHeader)
	md := metadata.New(map[string]string{})
	if authHeader != "" {
		md.Set("authorization", authHeader)
	}
	ctx := metadata.NewOutgoingContext(r.Context(), md)
	authClient := authpb.NewAuthServiceClient(grpcConn)
	resp, err := authClient.Logout(ctx, &emptypb.Empty{})
	if err != nil {
		log.Printf("‚ùå [Logout] gRPC error: %v", err)
		http.Error(w, `{"error": "`+err.Error()+`"}`, http.StatusInternalServerError)
		return
	}
	http.SetCookie(w, &http.Cookie{
		Name:     "auth_token",
		Value:    "",
		Path:     "/",
		Domain:   "localhost",
		Expires:  time.Unix(0, 0),
		MaxAge:   -1,
		HttpOnly: false,
		SameSite: http.SameSiteLaxMode,
	})
	http.SetCookie(w, &http.Cookie{
		Name:     "refresh_token",
		Value:    "",
		Path:     "/",
		Domain:   "localhost",
		Expires:  time.Unix(0, 0),
		MaxAge:   -1,
		HttpOnly: true,
		SameSite: http.SameSiteLaxMode,
	})
	log.Printf("‚úÖ [Logout] Cleared auth cookies")
	w.Header().Set("Content-Type", "application/json")
	if err := json.NewEncoder(w).Encode(resp); err != nil {
		log.Printf("‚ùå [Logout] Failed to encode response: %v", err)
		http.Error(w, `{"error": "failed to encode response"}`, http.StatusInternalServerError)
		return
	}
	log.Printf("üì§ [HTTP] Response: Successfully logged out")
}

// refreshTokenHandler –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–∞
func RefreshTokenHandler(w http.ResponseWriter, r *http.Request, grpcConn *grpc.ClientConn) {
	if r.Method != http.MethodPost {
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
		return
	}
	log.Printf("üì• [HTTP] Request: POST /v1/users/refresh-token")
	var req authpb.RefreshTokenRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		cookie, err := r.Cookie("refresh_token")
		if err == nil && cookie != nil {
			req.RefreshToken = cookie.Value
		} else {
			log.Printf("‚ùå [RefreshToken] Refresh token required: %v", err)
			http.Error(w, `{"error": "refresh token required"}`, http.StatusBadRequest)
			return
		}
	}
	authClient := authpb.NewAuthServiceClient(grpcConn)
	resp, err := authClient.RefreshToken(r.Context(), &req)
	if err != nil {
		log.Printf("‚ùå [RefreshToken] gRPC error: %v", err)
		http.Error(w, `{"error": "`+err.Error()+`"}`, http.StatusUnauthorized)
		return
	}
	utils.SetAuthCookies(w, resp.AccessToken, resp.RefreshToken)
	log.Printf("‚úÖ [RefreshToken] Set auth cookies")
	w.Header().Set("Content-Type", "application/json")
	if err := json.NewEncoder(w).Encode(resp); err != nil {
		log.Printf("‚ùå [RefreshToken] Failed to encode response: %v", err)
		http.Error(w, `{"error": "failed to encode response"}`, http.StatusInternalServerError)
		return
	}
	log.Printf("üì§ [HTTP] Response: Token refreshed")
}

// mediaUploadHandler –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –∑–∞–≥—Ä—É–∑–∫—É –º–µ–¥–∏–∞
func MediaUploadHandler(w http.ResponseWriter, r *http.Request, grpcConn *grpc.ClientConn) {
	if r.Method != http.MethodPost {
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
		return
	}
	log.Printf("üì• [HTTP] Request: POST /v1/media/upload")
	if err := r.ParseMultipartForm(10 << 20); err != nil {
		log.Printf("‚ùå [MediaUpload] Failed to parse form: %v", err)
		http.Error(w, `{"error": "failed to parse form"}`, http.StatusBadRequest)
		return
	}
	file, handler, err := r.FormFile("file")
	if err != nil {
		log.Printf("‚ùå [MediaUpload] No file provided: %v", err)
		http.Error(w, `{"error": "file is required"}`, http.StatusBadRequest)
		return
	}
	defer file.Close()
	fileContent, err := io.ReadAll(file)
	if err != nil {
		log.Printf("‚ùå [MediaUpload] Failed to read file: %v", err)
		http.Error(w, `{"error": "failed to read file"}`, http.StatusInternalServerError)
		return
	}
	authHeader := r.Header.Get("Authorization")
	log.Printf("üîç [MediaUpload] HTTP Authorization header: %s", authHeader)
	md := metadata.New(map[string]string{})
	if authHeader != "" {
		md.Set("authorization", authHeader)
	}
	ctx := metadata.NewOutgoingContext(r.Context(), md)
	mediaClient := mediapb.NewMediaServiceClient(grpcConn)
	dir := r.FormValue("dir")
	if dir == "" {
		dir = "media"
	}
	resp, err := mediaClient.UploadMedia(ctx, &mediapb.UploadMediaRequest{
		Dir:         dir,
		Filename:    handler.Filename,
		FileContent: fileContent,
	})
	if err != nil {
		log.Printf("‚ùå [MediaUpload] gRPC error: %v", err)
		http.Error(w, `{"error": "`+err.Error()+`"}`, http.StatusInternalServerError)
		return
	}
	log.Printf("‚úÖ [MediaUpload] File uploaded: %s", resp.Url)
	w.Header().Set("Content-Type", "application/json")
	if err := json.NewEncoder(w).Encode(resp); err != nil {
		log.Printf("‚ùå [MediaUpload] Failed to encode response: %v", err)
		http.Error(w, `{"error": "failed to encode response"}`, http.StatusInternalServerError)
		return
	}
	log.Printf("üì§ [HTTP] Response: File uploaded")
}

// storageHandler –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å—ã –∫ —Ö—Ä–∞–Ω–∏–ª–∏—â—É
func StorageHandler(w http.ResponseWriter, r *http.Request, s3Client *utils.S3Client) {
	key := strings.TrimPrefix(r.URL.Path, "/storage/")
	if key == "" {
		http.Error(w, "Bad storage path", http.StatusBadRequest)
		return
	}
	ctype, data, err := s3Client.GetFile(r.Context(), key)
	if err != nil {
		log.Printf("‚ùå StorageProxy GetFile(%q): %v", key, err)
		http.Error(w, "Not found", http.StatusNotFound)
		return
	}
	w.Header().Set("Content-Type", ctype)
	w.Header().Set("Cache-Control", "public, max-age=86400")
	w.WriteHeader(http.StatusOK)
	_, _ = w.Write(data)
}
