package main

import (
	"context"
	"encoding/json"
	"flag"
	"fmt"
	"io"
	"log"
	"net"
	"net/http"
	"os"
	"strings"
	"time"

	"golang.org/x/time/rate"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/metadata"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"

	"entgo.io/ent/dialect/sql/schema"
	gwruntime "github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
	"github.com/joho/godotenv"
	"github.com/rs/cors"

	"stormlink/server/ent"
	"stormlink/server/grpc/auth"
	authpb "stormlink/server/grpc/auth/protobuf"
	"stormlink/server/grpc/media"
	mediapb "stormlink/server/grpc/media/protobuf"
	"stormlink/server/grpc/user"
	userpb "stormlink/server/grpc/user/protobuf"
	"stormlink/server/middleware"
	"stormlink/server/usecase"
	"stormlink/server/utils"

	_ "github.com/lib/pq"
)

func initEnv() {
	err := godotenv.Load("server/.env")
	if err != nil {
		log.Println("‚ö†Ô∏è  .env —Ñ–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω")
	}
}

// chainInterceptors –æ–±—ä–µ–¥–∏–Ω—è–µ—Ç –Ω–µ—Å–∫–æ–ª—å–∫–æ interceptors –≤ –æ–¥–∏–Ω
func chainInterceptors(interceptors ...grpc.UnaryServerInterceptor) grpc.UnaryServerInterceptor {
	return func(
		ctx context.Context,
		req interface{},
		info *grpc.UnaryServerInfo,
		handler grpc.UnaryHandler,
	) (interface{}, error) {
		if len(interceptors) == 0 {
			return handler(ctx, req)
		}

		var chainHandler grpc.UnaryHandler = handler
		for i := len(interceptors) - 1; i >= 0; i-- {
			current := interceptors[i]
			chainHandler = func(currentCtx context.Context, currentReq interface{}, currentInfo *grpc.UnaryServerInfo, next grpc.UnaryHandler) grpc.UnaryHandler {
				return func(ctx context.Context, req interface{}) (interface{}, error) {
					return current(ctx, req, currentInfo, next)
				}
			}(ctx, req, info, chainHandler)
		}

		return chainHandler(ctx, req)
	}
}

func main() {
	// –ü—É—Ç—å –∫ .env
	initEnv()

	// –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ –ë–î
	dsn := fmt.Sprintf(
		"host=%s port=%s user=%s password=%s dbname=%s sslmode=%s",
		os.Getenv("DB_HOST"), os.Getenv("DB_PORT"),
		os.Getenv("DB_USER"), os.Getenv("DB_PASSWORD"),
		os.Getenv("DB_NAME"), os.Getenv("SSL_MODE"),
	)
	client, err := ent.Open("postgres", dsn)
	if err != nil {
		log.Fatalf("–Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ –±–∞–∑–µ: %v", err)
	}
	defer client.Close()

	// –ú–∏–≥—Ä–∞—Ü–∏–∏
	resetDB := flag.Bool("reset-db", false, "drop and recreate all tables and columns")
	flag.Parse()

	if *resetDB {
		log.Println("‚ö†Ô∏è  –ü–æ–ª–Ω—ã–π —Å–±—Ä–æ—Å –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö —Å —É–¥–∞–ª–µ–Ω–∏–µ–º –∫–æ–ª–æ–Ω–æ–∫ –∏ –∏–Ω–¥–µ–∫—Å–æ–≤...")
		if err := client.Schema.Create(
			context.Background(),
			schema.WithDropIndex(true),
			schema.WithDropColumn(true),
		); err != nil {
			log.Fatalf("–æ—à–∏–±–∫–∞ —Å–±—Ä–æ—Å–∞ —Å—Ö–µ–º—ã: %v", err)
		}
		log.Println("‚úÖ –°–±—Ä–æ—Å –±–∞–∑—ã –∑–∞–≤–µ—Ä—à—ë–Ω.")
	} else {
		log.Println("‚ÑπÔ∏è  –û–±—ã—á–Ω–∞—è –º–∏–≥—Ä–∞—Ü–∏—è —Å—Ö–µ–º—ã...")
		if err := client.Schema.Create(context.Background()); err != nil {
			log.Fatalf("–æ—à–∏–±–∫–∞ –º–∏–≥—Ä–∞—Ü–∏–∏ —Å—Ö–µ–º—ã: %v", err)
		}
		log.Println("‚úÖ –ú–∏–≥—Ä–∞—Ü–∏—è –∑–∞–≤–µ—Ä—à–µ–Ω–∞.")
	}

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è RateLimiter: 1 –∑–∞–ø—Ä–æ—Å –≤ —Å–µ–∫—É–Ω–¥—É, burst 3
	rl := middleware.NewRateLimiter(rate.Limit(1), 3)

	// –ö–æ–º–±–∏–Ω–∏—Ä—É–µ–º middleware
	chain := []grpc.UnaryServerInterceptor{
		middleware.RateLimitInterceptor(rl),
		middleware.GRPCAuthInterceptor,
	}

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è gRPC —Å–µ—Ä–≤–µ—Ä–∞
	grpcServer := grpc.NewServer(
		grpc.UnaryInterceptor(chainInterceptors(chain...)),
	)

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è UserUsecase
	userUsecase := usecase.NewUserUsecase(client)

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–æ–≤
	userService := user.NewUserService(client, userUsecase)
	userpb.RegisterUserServiceServer(grpcServer, userService)

	authService := auth.NewAuthService(client)
	authpb.RegisterAuthServiceServer(grpcServer, authService)

	s3Client, err := utils.NewS3Client()
	if err != nil {
		log.Fatalf("failed to init S3 client: %v", err)
	}
	mediaService := media.NewMediaServiceWithClient(s3Client)
	mediapb.RegisterMediaServiceServer(grpcServer, mediaService)

	// gRPC listener (–Ω–∞ 4000)
	go func() {
		listener, err := net.Listen("tcp", ":4000")
		if err != nil {
			log.Fatalf("–Ω–µ —É–¥–∞–ª–æ—Å—å —Å–ª—É—à–∞—Ç—å –ø–æ—Ä—Ç 4000: %v", err)
		}
		log.Println("üì° gRPC-—Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ :4000")
		if err := grpcServer.Serve(listener); err != nil {
			log.Fatalf("–æ—à–∏–±–∫–∞ –ø—Ä–∏ –∑–∞–ø—É—Å–∫–µ gRPC-—Å–µ—Ä–≤–µ—Ä–∞: %v", err)
		}
	}()

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ gRPC-—Å–µ—Ä–≤–µ—Ä—É –¥–ª—è –∫–∞—Å—Ç–æ–º–Ω—ã—Ö —Ö–µ–Ω–¥–ª–µ—Ä–æ–≤
	grpcConn, err := grpc.Dial("localhost:4000", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("–Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ gRPC-—Å–µ—Ä–≤–µ—Ä—É: %v", err)
	}
	defer grpcConn.Close()

	// HTTP Gateway mux
	ctx := context.Background()
	gwmux := gwruntime.NewServeMux(
		gwruntime.WithErrorHandler(func(ctx context.Context, mux *gwruntime.ServeMux, marshaler gwruntime.Marshaler, w http.ResponseWriter, r *http.Request, err error) {
			statusCode := codes.Unknown
			if st, ok := status.FromError(err); ok {
				statusCode = st.Code()
			}
			if statusCode == codes.ResourceExhausted {
				http.Error(w,
					`{"error": "rate limit exceeded, try again later"}`,
					http.StatusTooManyRequests,
				)
				return
			}
			gwruntime.DefaultHTTPErrorHandler(ctx, mux, marshaler, w, r, err)
		}),
	)

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º grpc-gateway —Ö–µ–Ω–¥–ª–µ—Ä—ã
	err = userpb.RegisterUserServiceHandlerFromEndpoint(ctx, gwmux, "localhost:4000", []grpc.DialOption{grpc.WithInsecure()})
	if err != nil {
		log.Fatalf("–Ω–µ —É–¥–∞–ª–æ—Å—å –∑–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞—Ç—å grpc-gateway —Ö–µ–Ω–¥–ª–µ—Ä UserService: %v", err)
	}

	// –ö–∞—Å—Ç–æ–º–Ω—ã–π –º—É–ª—å—Ç–∏–ø–ª–µ–∫—Å–æ—Ä –¥–ª—è –º–∞—Ä—à—Ä—É—Ç–∏–∑–∞—Ü–∏–∏
	mux := http.NewServeMux()

	// –•–µ–Ω–¥–ª–µ—Ä –¥–ª—è /v1/users/login
	mux.HandleFunc("/v1/users/login", func(w http.ResponseWriter, r *http.Request) {
		if r.Method != http.MethodPost {
			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
			return
		}

		log.Printf("üì• [HTTP] Request: POST /v1/users/login")

		var req authpb.LoginRequest
		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
			log.Printf("‚ùå [Login] Invalid request body: %v", err)
			http.Error(w,
				`{"error": "invalid request body"}`,
				http.StatusBadRequest,
			)
			return
		}

		authClient := authpb.NewAuthServiceClient(grpcConn)
		resp, err := authClient.Login(r.Context(), &req)
		if err != nil {
			log.Printf("‚ùå [Login] gRPC error: %v", err)
			http.Error(w, fmt.Sprintf(`{"error":"%v"}`, err), http.StatusUnauthorized)
			return
		}

		// –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∫—É–∫–∏
		utils.SetAuthCookies(w, resp.AccessToken, resp.RefreshToken)
		log.Printf("‚úÖ [Login] Set auth cookies")

		// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º JSON-–æ—Ç–≤–µ—Ç
		w.Header().Set("Content-Type", "application/json")
		if err := json.NewEncoder(w).Encode(resp); err != nil {
			log.Printf("‚ùå [Login] Failed to encode response: %v", err)
			http.Error(w,
				`{"error": "failed to encode response"}`,
				http.StatusInternalServerError,
			)
			return
		}

		log.Printf("üì§ [HTTP] Response: Login successful")
	})

	// –•–µ–Ω–¥–ª–µ—Ä –¥–ª—è /v1/users/logout
	mux.HandleFunc("/v1/users/logout", func(w http.ResponseWriter, r *http.Request) {
		if r.Method != http.MethodPost {
			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
			return
		}

		log.Printf("üì• [HTTP] Request: POST /v1/users/logout")

		// –ò–∑–≤–ª–µ–∫–∞–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫ Authorization
		authHeader := r.Header.Get("Authorization")
		log.Printf("üîç [Logout] HTTP Authorization header: %s", authHeader)

		// –°–æ–∑–¥–∞–µ–º gRPC-–º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
		md := metadata.New(map[string]string{})
		if authHeader != "" {
			md.Set("authorization", authHeader)
		}

		// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–º–∏
		ctx := metadata.NewOutgoingContext(r.Context(), md)

		authClient := authpb.NewAuthServiceClient(grpcConn)
		resp, err := authClient.Logout(ctx, &emptypb.Empty{})
		if err != nil {
			log.Printf("‚ùå [Logout] gRPC error: %v", err)
			http.Error(w, fmt.Sprintf(`{"error":"%v"}`, err), http.StatusInternalServerError)
			return
		}

		// –û—á–∏—â–∞–µ–º –∫—É–∫–∏
		http.SetCookie(w, &http.Cookie{
			Name:     "auth_token",
			Value:    "",
			Path:     "/",
			Domain:   "localhost",
			Expires:  time.Unix(0, 0),
			MaxAge:   -1,
			HttpOnly: false,
			SameSite: http.SameSiteLaxMode,
		})
		log.Printf("‚úÖ [Logout] Cleared auth_token cookie")
		http.SetCookie(w, &http.Cookie{
			Name:     "refresh_token",
			Value:    "",
			Path:     "/",
			Domain:   "localhost",
			Expires:  time.Unix(0, 0),
			MaxAge:   -1,
			HttpOnly: true,
			SameSite: http.SameSiteLaxMode,
		})
		log.Printf("‚úÖ [Logout] Cleared refresh_token cookie")

		// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º JSON-–æ—Ç–≤–µ—Ç
		w.Header().Set("Content-Type", "application/json")
		if err := json.NewEncoder(w).Encode(resp); err != nil {
			log.Printf("‚ùå [Logout] Failed to encode response: %v", err)
			http.Error(w,
				`{"error": "failed to encode response"}`,
				http.StatusInternalServerError,
			)
			return
		}

		log.Printf("üì§ [HTTP] Response: Successfully logged out")
	})

	// –•–µ–Ω–¥–ª–µ—Ä –¥–ª—è /v1/users/refresh-token
	mux.HandleFunc("/v1/users/refresh-token", func(w http.ResponseWriter, r *http.Request) {
		if r.Method != http.MethodPost {
			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
			return
		}

		log.Printf("üì• [HTTP] Request: POST /v1/users/refresh-token")

		var req authpb.RefreshTokenRequest
		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
			// –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫—É–∫–∏, –µ—Å–ª–∏ —Ç–µ–ª–æ –ø—É—Å—Ç–æ–µ
			cookie, err := r.Cookie("refresh_token")
			if err == nil && cookie != nil {
				req.RefreshToken = cookie.Value
			} else {
				log.Printf("‚ùå [RefreshToken] Refresh token required: %v", err)
				http.Error(w,
					`{"error": "refresh token required"}`,
					http.StatusBadRequest,
				)
				return
			}
		}

		authClient := authpb.NewAuthServiceClient(grpcConn)
		resp, err := authClient.RefreshToken(r.Context(), &req)
		if err != nil {
			log.Printf("‚ùå [RefreshToken] gRPC error: %v", err)
			http.Error(w, fmt.Sprintf(`{"error":"%v"}`, err), http.StatusUnauthorized)
			return
		}

		// –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∫—É–∫–∏
		utils.SetAuthCookies(w, resp.AccessToken, resp.RefreshToken)
		log.Printf("‚úÖ [RefreshToken] Set auth cookies")

		// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º JSON-–æ—Ç–≤–µ—Ç
		w.Header().Set("Content-Type", "application/json")
		if err := json.NewEncoder(w).Encode(resp); err != nil {
			log.Printf("‚ùå [RefreshToken] Failed to encode response: %v", err)
			http.Error(w,
				`{"error": "failed to encode response"}`,
				http.StatusInternalServerError,
			)
			return
		}

		log.Printf("üì§ [HTTP] Response: Token refreshed")
	})

	// –•–µ–Ω–¥–ª–µ—Ä –¥–ª—è /v1/media/upload
	mux.HandleFunc("/v1/media/upload", func(w http.ResponseWriter, r *http.Request) {
		if r.Method != http.MethodPost {
			http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
			return
		}

		log.Printf("üì• [HTTP] Request: POST /v1/media/upload")

		// –ü–∞—Ä—Å–∏–º multipart/form-data (–ª–∏–º–∏—Ç 10MB)
		if err := r.ParseMultipartForm(10 << 20); err != nil {
			log.Printf("‚ùå [MediaUpload] Failed to parse form: %v", err)
			http.Error(w,
				`{"error": "failed to parse form"}`,
				http.StatusBadRequest,
			)
			return
		}

		file, handler, err := r.FormFile("file")
		if err != nil {
			log.Printf("‚ùå [MediaUpload] No file provided: %v", err)
			http.Error(w,
				`{"error": "file is required"}`,
				http.StatusBadRequest,
			)
			return
		}
		defer file.Close()

		fileContent, err := io.ReadAll(file)
		if err != nil {
			log.Printf("‚ùå [MediaUpload] Failed to read file: %v", err)
			http.Error(w,
				`{"error": "failed to read file"}`,
				http.StatusInternalServerError,
			)
			return
		}

		// –ò–∑–≤–ª–µ–∫–∞–µ–º Authorization
		authHeader := r.Header.Get("Authorization")
		log.Printf("üîç [MediaUpload] HTTP Authorization header: %s", authHeader)

		// –°–æ–∑–¥–∞–µ–º gRPC-–º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
		md := metadata.New(map[string]string{})
		if authHeader != "" {
			md.Set("authorization", authHeader)
		}

		// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–º–∏
		ctx := metadata.NewOutgoingContext(r.Context(), md)

		mediaClient := mediapb.NewMediaServiceClient(grpcConn)
		// —á–∏—Ç–∞–µ–º –∏–∑ multipart-–ø–æ–ª—è "dir"
		dir := r.FormValue("dir")
		if dir == "" {
			dir = "media"
		}
		resp, err := mediaClient.UploadMedia(ctx, &mediapb.UploadMediaRequest{
			Dir:         dir,
			Filename:    handler.Filename,
			FileContent: fileContent,
		})
		if err != nil {
			log.Printf("‚ùå [MediaUpload] gRPC error: %v", err)
			http.Error(w, fmt.Sprintf(`{"error":"%v"}`, err), http.StatusInternalServerError)
			return
		}

		log.Printf("‚úÖ [MediaUpload] File uploaded: %s", resp.Url)

		// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º JSON-–æ—Ç–≤–µ—Ç
		w.Header().Set("Content-Type", "application/json")
		if err := json.NewEncoder(w).Encode(resp); err != nil {
			log.Printf("‚ùå [MediaUpload] Failed to encode response: %v", err)
			http.Error(w,
				`{"error": "failed to encode response"}`,
				http.StatusInternalServerError,
			)
			return
		}

		log.Printf("üì§ [HTTP] Response: File uploaded")
	})

	mux.HandleFunc("/storage/", func(w http.ResponseWriter, r *http.Request) {
		key := strings.TrimPrefix(r.URL.Path, "/storage/")
		if key == "" {
			http.Error(w, "Bad storage path", http.StatusBadRequest)
			return
		}
		ctype, data, err := s3Client.GetFile(r.Context(), key)
		if err != nil {
			log.Printf("‚ùå StorageProxy GetFile(%q): %v", key, err)
			http.Error(w, "Not found", http.StatusNotFound)
			return
		}
		w.Header().Set("Content-Type", ctype)
		w.Header().Set("Cache-Control", "public, max-age=86400")
		w.WriteHeader(http.StatusOK)
		_, _ = w.Write(data)
	})

	// –í—Å–µ –æ—Å—Ç–∞–ª—å–Ω—ã–µ –º–∞—Ä—à—Ä—É—Ç—ã —á–µ—Ä–µ–∑ gRPC-Gateway
	mux.Handle("/", gwmux)

	// –ù–∞—Å—Ç—Ä–æ–π–∫–∞ CORS
	corsHandler := cors.New(cors.Options{
		AllowedOrigins:   []string{"http://localhost:3000"},
		AllowedMethods:   []string{"GET", "POST", "OPTIONS"},
		AllowedHeaders:   []string{"Authorization", "Content-Type"},
		ExposedHeaders:   []string{"Set-Cookie"},
		AllowCredentials: true,
	}).Handler(mux)

	// HTTP —Å–µ—Ä–≤–µ—Ä (–Ω–∞ 4080)
	httpServer := &http.Server{
		Addr: ":4080",
		Handler: http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
			corsHandler.ServeHTTP(w, r)
		}),
	}

	log.Println("üåê HTTP-—Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ :4080")
	if err := httpServer.ListenAndServe(); err != nil {
		log.Fatalf("–æ—à–∏–±–∫–∞ –ø—Ä–∏ –∑–∞–ø—É—Å–∫–µ HTTP-—Å–µ—Ä–≤–µ—Ä–∞: %v", err)
	}
}
